SCRUM-4953 create new variatn indexer